# pam-auth-update

./: .gitignore  AUTHORS  COPYING  configure.ac
debian/: README.Debian  README.source  changelog  control  copyright  gbp.conf  rules
src/: .gitignore  Makefile.am  common_conf.c  generate_pam_common.c  pam-auth-update.c  pam-auth-update.h  parse_args.c  parse_args.h
src/config/: Makefile.am  config_parser.l  config_scanner.y
src/template/: Makefile.am  template_parser.l  template_scanner.y
